Exercícios aula Dom I ok

--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
 
 <body>
   <main>
+    <label for="texto">Fruta</label>
+    <input type="text" name="fruta" id="inputFruta" >
+    <br><br>
+    <button onclick="adicionaFruta()">Adicionar</button>
     <ul id="lista-de-frutas">
       <li id="fruta-1"></li>
       <li id="fruta-2"></li>
       <li id="fruta-3"></li>
       <li id="fruta-4"></li>
     </ul>
+
   </main>
 </body>
 
