--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 <body>
   <main>
+    <label for="input"></label>
+    <input onchange="adicionar()" id="input" name="input" type="text">
+    <button onclick="botao()">Submit</button>
     <ul id="lista-de-frutas">
       <li id="fruta-1"></li>
       <li id="fruta-2"></li>
