entrega do exercício a027

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <li id="fruta-3"></li>
       <li id="fruta-4"></li>
     </ul>
+    <label for="texto">Digite uma fruta aqui</label>
+    <input id="frutas" type="text">
+    <button onclick="adicionaFruta()">Clique aqui</button>
   </main>
 </body>
 
