--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 <body>
   <main>
+    <label for="fruta">Fruta:</label>
+    <input type="text" id="fruta" name="fruta"/>
     <ul id="lista-de-frutas">
       <li id="fruta-1"></li>
       <li id="fruta-2"></li>
