--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       <li id="fruta-4"></li>
     </ul>
   </main>
+
+  <label for="name">Digite o nome de uma fruta:</label><br>
+  <input type="text" name="name" id="name">
+  <button onclick="adicionaFruta()">Clique aqui</button>
+
 </body>
 
 </html>
