--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <title>Home</title>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width" />
-
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
   <script src="script.js" defer></script>
 </head>
-
 <body>
   <main>
     <ul id="lista-de-frutas">
@@ -18,7 +15,11 @@
       <li id="fruta-3"></li>
       <li id="fruta-4"></li>
     </ul>
-  </main>
-</body>
+    <label for="name"> Fruta 4</label>
+    <input type="text" id="name">
+    <button onclick="clicDois()"> Clique </button>
 
+  </main>
+  
+</body>
 </html>
