Resolução dos exercícios propostos

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       <li id="fruta-3"></li>
       <li id="fruta-4"></li>
     </ul>
+    <!-- Exercício 02 incluir Label e imput -->
+    <label for="fruta">Nova Fruta:</label>
+    <input id="fruta" type="text"/>  
+    <button onclick="adicionaFruta()">Adicionar à lista!</button> 
   </main>
 </body>
 
