--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
 
 <body>
   <main>
-    <ul id="lista-de-frutas">
-      <li id="fruta-1"></li>
-      <li id="fruta-2"></li>
-      <li id="fruta-3"></li>
-      <li id="fruta-4"></li>
-    </ul>
+    <section>
+      <nav>
+        <label for="txt">Fruta:</label>
+        <input type="text" id="txt">
+        <button onclick="Clicou()">Adicionar</button>
+      </nav>
+      <ul id="lista-de-frutas">
+        <li id="fruta-1"></li>
+        <li id="fruta-2"></li>
+        <li id="fruta-3"></li>
+        <li id="fruta-4"></li>
+      </ul>
+    </section>
   </main>
 </body>
 
