--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
       <li id="fruta-3"></li>
       <li id="fruta-4"></li>
     </ul>
+
+    <label for="fruta">Adicionar Fruta: </label>
+    <input type="text" name="fruta" onmouseenter="digitar()" id="fruta">
+    <button onclick="adicionar()">Adicionar</button>
+
   </main>
 </body>
 
