AmmalB-DOM1-JoaoBecker

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Home</title>
+  <title>a027 - Exercicios</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
 
@@ -18,6 +18,9 @@
       <li id="fruta-3"></li>
       <li id="fruta-4"></li>
     </ul>
+    <label for="fruta">Outra fruta:</label>
+    <input type="text" id="fruta" name="fruta"    onkeyup="imprimirTextoDigitado()"/>
+    <button onclick="adicionarInput()">Submit</button>
   </main>
 </body>
 
