--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
 
 <body>
   <main>
+    <label for="novo">Nova Fruta</label>
+    <input id="novo" type="text" name="novo" onchange="handleChange()">
+    <button onclick="handleClick()">Click</button>
     <ul id="lista-de-frutas">
-      <li id="fruta-1"></li>
+      <!-- <li id="fruta-1"></li>
       <li id="fruta-2"></li>
       <li id="fruta-3"></li>
-      <li id="fruta-4"></li>
+      <li id="fruta-4"></li> -->
+      
     </ul>
   </main>
 </body>
