Exercicios aula 27 resolvidos

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <li id="fruta-3"></li>
       <li id="fruta-4"></li>
     </ul>
+    <label id="fruta">Digite o nome de uma fruta:</label>
+    <input type="text" name="frutaText" id="frutaText" placeholder="Digite aqui">
+    <button onclick="addFruta()">Clique aqui para adicionar</button>
   </main>
 </body>
 
