--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       <li id="fruta-4"></li>
     </ul>
   </main>
+  <p id="paragrafo">Olá!</p>
+  <label for="texto">Texto:</label>
+  <input id="texto" name="texto" type="text"  onkeyup="printarInput()" />
+  <br/>
+  <button type="button" onclick="mostraInput()" >Clique aqui</button>
 </body>
 
 </html>
