--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
 </head>
 
 <body>
-  <main>
-    <ul id="lista-de-frutas">
+  <main >
+
+    <label for="nome">Nome de mais uma fruta:</label>
+    <input type="text" id="nome" name="nome" value=""/>
+    <button onclick="adicionaItem()">adicionar</button>
+    
+    <ul onclick="inserirItens()" id="lista-de-frutas">
       <li id="fruta-1"></li>
       <li id="fruta-2"></li>
       <li id="fruta-3"></li>
