--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <li id="fruta-3"></li>
       <li id="fruta-4"></li>
     </ul>
+    <label for="texto">Adicione outra fruta</label>
+    <input type="text" id="novafruta" name="novafruta" onchange="adicionarFruta()">
+    <button onclick="adicionarValorLista()">Clique aqui</button>
   </main>
 </body>
 
