--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Home</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
 
-<head>
-  <title>Home</title>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
+  </head>
 
-  <link rel="stylesheet" href="style.css" />
-  <script src="script.js" defer></script>
-</head>
-
-<body>
-  <main>
-    <ul id="lista-de-frutas">
-      <li id="fruta-1"></li>
-      <li id="fruta-2"></li>
-      <li id="fruta-3"></li>
-      <li id="fruta-4"></li>
-    </ul>
-  </main>
-</body>
-
+  <body>
+    <main>
+      <ul id="lista-de-frutas">
+        <li id="fruta-1"></li>
+        <li id="fruta-2"></li>
+        <li id="fruta-3"></li>
+        <li id="fruta-4"></li>
+      </ul>
+      <label for="texto">Adicione outra fruta</label>
+      <input
+        type="text"
+        id="novafruta"
+        name="novafruta"
+        onchange="adicionarFruta()"
+      />
+      <button onclick="adicionarValorLista()">Clique aqui</button>
+    </main>
+  </body>
 </html>
