--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       <li id="fruta-2"></li>
       <li id="fruta-3"></li>
       <li id="fruta-4"></li>
+      <label for="name">Nome</label>
+      <input type="name" id="nome" name="nome" value="">
+      <button onclick="colocavalor()">Adicionar</button>
     </ul>
   </main>
 </body>
