--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
 <body>
   <main>
     <ul id="lista-de-frutas">
-      <li id="fruta-1"></li>
-      <li id="fruta-2"></li>
-      <li id="fruta-3"></li>
-      <li id="fruta-4"></li>
+      <li for="fruta-1" id="fruta-1"></li>
+      <li for="fruta-2" id="fruta-2"></li>
+      <li for="fruta-3" id="fruta-3"></li>
+      <li for="fruta-4" id="fruta-4"></li>
     </ul>
+    <label for="fruta"> Fruta:</label>
+    <input type="text" id="frutaNova" name="fruta" value="Procure a fruta"/>
+    <button onclick="adicionar()" id="add">Adicionar</button>
   </main>
 </body>
 
