--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
 </head>
 
@@ -18,6 +17,11 @@
       <li id="fruta-3"></li>
       <li id="fruta-4"></li>
     </ul>
+
+    <label for="fruta">Texto:</label>
+  <input onkeydown="imprimir()" id="fruta" name="fruta" type="text" value="Morango" />
+  <button onclick="botao()" id="click" type="button">Clique </button>
+
   </main>
 </body>
 
