--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <li id="fruta-3"></li>
       <li id="fruta-4"></li>
     </ul>
+    <label for="fruta-extra">Digite o nome de uma fruta</label>
+    <input type="text" id="fruta-extra" name="fruta">
+    <button onclick="adicionarFruta ()">Adicionar Fruta</button>
   </main>
 </body>
 
