--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li id="fruta-3"></li>
       <li id="fruta-4"></li>
     </ul>
-    <label for="nome">Nome</label>
+    <label for="nome">Nova Fruta</label>
     <input type="text" id="nome" name="nome" value="Nova Fruta" />
     <button onclick='addFruta()'>Enviar</button>
   </main>
