--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
 
+
   <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
 </head>
@@ -18,6 +19,9 @@
       <li id="fruta-3"></li>
       <li id="fruta-4"></li>
     </ul>
+
+    <label for="frutinhas"></label>
+    <input type="text" id="frutis" name="frutis">
   </main>
 </body>
 
