exercicio-II-done

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     </ul>
 
     <label for="frutinhas"></label>
-    <input type="text" id="frutis" name="frutis">
+    <input type="text" id="frutis" name="frutis" value="Limão">
+
+    
   </main>
 </body>
 
