--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <li id="fruta-4"></li>
     </ul>
 
-    <label for="frutinhas"></label>
-    <input type="text" id="frutis" name="frutis" value="Limão">
+    <label for="frutinhas"> Lista de Frutas</label>
+    <input type="text" id="frutinhas" name="texto"  value="limao" onkeyup="pegarValorInput()">
 
-    
+    <button onclick="adicionarFrutaNaLista()" > ADD </button>
   </main>
 </body>
 
